--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
+body {
+  background-image: url("https://images.unsplash.com/photo-1501949997128-2fdb9f6428f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80");
+}
+
 .App {
   text-align: center;
+  margin-top: 150px;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.board {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 50px auto;
+  width: 300px;
+  height: 300px;
+  border: 1px solid black;
+}
+
+.item {
+  margin: 1px;
+  width: 95px;
+  height: 95px;
+  border: 1px solid black;
+  font-size:50px;
+}
+
+.reset-btn {
+  width: 300px;
+  background-color: black;
   color: white;
+  font-size: 20px;
+  font-weight: 700;
 }
 
-.App-link {
-  color: #61dafb;
+.win-popup {
+  width: 320px;
+  height: 350px;
+  position: absolute;
+  background-color: #ccdceb;
+  border: 1px solid gray;
+  border-radius: 50px;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 35px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.win-popup button {
+  font-size: 25px;
+  background-color: #ccdceb;
+  border-radius: 20px;
+  border: 1px solid gray;
+
 }
