--- a/src/App.css
+++ b/src/App.css
@@ -53,5 +53,10 @@ body {
   background-color: #ccdceb;
   border-radius: 20px;
   border: 1px solid gray;
+}
 
+.whose-turn {
+  font-size: 25px;
+  margin-left: 10px;
+  font-weight: 400;
 }
